--- a/wsgiadmin/templates/boxes.html
+++ b/wsgiadmin/templates/boxes.html
@@ -35,7 +35,7 @@
                             <img src="{{ STATIC_URL }}images/ico-heslo.png" alt="{% trans "Change password" %}"/>
                         </a></li>
 
-                        <li><a href="#" class="object_delete" title="{% trans "Delete" %}" rel="{{ email.id }}">
+                        <li class="smazat"><a href="#" class="object_delete" title="{% trans "Delete" %}" rel="{{ email.id }}">
                             <img src="{{ STATIC_URL }}images/ico-smazat.png" alt="{% trans "Delete" %}"/>
                         </a></li>
                         </ul>
