--- a/wsgiadmin/templates/domains.html
+++ b/wsgiadmin/templates/domains.html
@@ -33,7 +33,7 @@
                     <td>{{ domain.name }}</td>
                     <td id="domain_{{ domain.id }}">
                         <ul class="akce">
-                        <li><a href="#" title="{% trans "Delete" %}" rel="{{ domain.id }}" class="object_delete">
+                        <li class="smazat"><a href="#" title="{% trans "Delete" %}" rel="{{ domain.id }}" class="object_delete">
                             <img src="{{ STATIC_URL }}images/ico-smazat.png" alt="{% trans "Delete" %}"/>
                         </a></li>
                         </ul>
