--- a/wsgiadmin/templates/ftps.html
+++ b/wsgiadmin/templates/ftps.html
@@ -25,15 +25,15 @@
                     <td>{{ ftp.dir }}</td>
                     <td id="ftp_{{ ftp.id }}">
                         <ul class="akce">
-                        <a href="{% url ftp_passwd ftp.id %}" title="{% trans "Change password" %}">
+                        <li><a href="{% url ftp_passwd ftp.id %}" title="{% trans "Change password" %}">
                             <img src="{{ STATIC_URL }}images/ico-heslo.png" alt="{% trans "Change password" %}"/>
-                        </a>
-                        <a href="{% url ftp_upsert ftp.id %}" title="{% trans "Edit" %}">
+                        </a></li>
+                        <li><a href="{% url ftp_upsert ftp.id %}" title="{% trans "Edit" %}">
                             <img src="{{ STATIC_URL }}images/ico-editovat.png" alt="{% trans "Edit" %}"/>
-                        </a>
-                        <a href="#" class="object_delete" title="{% trans "Delete" %}" rel="{{ ftp.id }}">
+                        </a></li>
+                        <li class="smazat"><a href="#" class="object_delete" title="{% trans "Delete" %}" rel="{{ ftp.id }}">
                             <img src="{{ STATIC_URL }}images/ico-smazat.png" alt="{% trans "Delete" %}"/>
-                        </a>
+                        </a></li>
                         </ul>
                     </td>
                 </tr>
