--- a/wsgiadmin/templates/redirects.html
+++ b/wsgiadmin/templates/redirects.html
@@ -35,7 +35,7 @@
                             <img src="{{ STATIC_URL }}images/ico-editovat.png" alt="{% trans "Edit" %}"/>
                         </a></li>
 
-                        <li><a href="#" class="object_delete" title="{% trans "Delete" %}" rel="{{ redirect.id }}">
+                        <li class="smazat"><a href="#" class="object_delete" title="{% trans "Delete" %}" rel="{{ redirect.id }}">
                             <img src="{{ STATIC_URL }}images/ico-smazat.png" alt="{% trans "Delete" %}"/>
                         </a></li>
                         </ul>
