--- a/wsgiadmin/templates/reg.html
+++ b/wsgiadmin/templates/reg.html
@@ -19,7 +19,7 @@
                 <div class="container-top">
                     <div class="container-bottom">
                         <h2>{% trans "Registration" %}</h2>
-                        <form action="." class="registrace-prihlaseni" id="reg-form" method="post">
+                        <form action="{% url registration %}" class="registrace-prihlaseni" id="reg-form" method="post">
                             {% csrf_token %}
                             {{ form1.as_p }}
                             <div class="border-01"></div>
