--- a/wsgiadmin/templates/users.html
+++ b/wsgiadmin/templates/users.html
@@ -45,7 +45,7 @@
 						</td>
 						<td>{{ user.parms.count_domains }}×</td>
 						<td>{{ user.parms.count_sites }}×</td>
-                        <td>{{ user.parms.pay_total_day }}×</td>
+                        <td>{{ user.parms.pay_total_day }}</td>
                         {% with user.parms.credit as credits %}
                         {% if credits >= 0 %}
                         <td style="color: green;">{{ credits }}</td>
