Cost in credit.html

--- a/wsgiadmin/templates/credit.html
+++ b/wsgiadmin/templates/credit.html
@@ -94,6 +94,7 @@
                 <input type="hidden" name="credit" value="{{ for_month }}" />
                 <strong>+{{ for_month|floatformat:2 }}</strong>
                 <input type="submit" value="{% trans "BUY" %}" />
+                <i>({{ for_month_cost|floatformat:2 }} Kč)</i>
                 {% csrf_token %}
             </form>
         </td>
@@ -105,6 +106,7 @@
                 <input type="hidden" name="credit" value="{{ for_three_months }}" />
                 <strong>+{{ for_three_months|floatformat:2 }}</strong>
                 <input type="submit" value="{% trans "BUY" %}" />
+                <i>({{ for_three_months_cost|floatformat:2 }} Kč)</i>
                 {% csrf_token %}
             </form>
         </td>
@@ -116,6 +118,7 @@
                 <input type="hidden" name="credit" value="{{ for_six_months }}" />
                 <strong>+{{ for_six_months|floatformat:2 }}</strong>
                 <input type="submit" value="{% trans "BUY" %}" />
+                <i>({{ for_six_months_cost|floatformat:2 }} Kč)</i>
                 {% csrf_token %}
             </form>
         </td>
@@ -127,6 +130,7 @@
                 <input type="hidden" name="credit" value="{{ for_year }}" />
                 <strong>+{{ for_year|floatformat:2 }}</strong>
                 <input type="submit" value="{% trans "BUY" %}" />
+                <i>({{ for_year_cost|floatformat:2 }} Kč)</i>
                 {% csrf_token %}
             </form>
         </td>
