--- a/wsgiadmin/templates/credit.html
+++ b/wsgiadmin/templates/credit.html
@@ -59,7 +59,7 @@
 
     <table>
     <tr>
-        <th colspan="2">What you get for 1 credit</th>
+        <th colspan="2">{% trans "What you get for 1 credit" %}</th>
     </tr>
     <tr>
         <td>{% trans "WSGI app" %}</td>
