--- a/wsgiadmin/templates/reg.html
+++ b/wsgiadmin/templates/reg.html
@@ -28,7 +28,8 @@
                             <p>
                                 <input type="submit" name="" class="input-submit-registrovat" value="Registrovat" />
                             </p>
-                            <p class="help"><a href="{% url login %}">{% trans "Login" %}</a></p>
+                            {% if config.terms_url %}<div class="terms">{% trans "By click on the button, you agree with our terms" %}</div>{% endif %}
+                            <p class="help"><a href="{% url login %}">{% trans "Login" %}</a> {% if config.terms_url %}| <a href="{{ config.terms_url }}" target="_blank">{% trans "Terms" %}</a>{% endif %}</p>
                         </form>
 
                         {% if messages %}
