--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -115,6 +115,7 @@
                                 <li><a href="{% url wsgiadmin.useradmin.views.info %}">{% trans "Home" %}</a></li>
                                 {% if superuser.is_superuser %}<li><a href="{% url wsgiadmin.useradmin.views.master %}" class="red">{% trans "Master panel" %}</a></li>{% endif %}
                                 <li><a href="{% url wsgiadmin.useradmin.views.requests %}">{% trans "Last 20 server's request" %}</a></li>
+                                <li><a href="{% url credit_stats %}">{% trans "Payout stats" %}</a></li>
                                 <li><a href="{% url credit %}" style="color: red;">{% trans "Buy some credit" %}</a></li>
                             </ul>
                         </li>
