--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -147,7 +147,7 @@
                         <li>
                             <ul>
                                 <li><a href="{% url wsgiadmin.domains.views.add %}">{% trans "Add registered domain" %}</a></li>
-                                <li><a href="{% url domains_list %}">{% trans "Domain's list" %}</a></li>
+                                <li><a href="{% url domains_list %}">{% trans "Domains list" %}</a></li>
                             </ul>
                         </li>
                     </ul>
