--- a/wsgiadmin/templates/apache.html
+++ b/wsgiadmin/templates/apache.html
@@ -5,11 +5,6 @@
     {% trans "Administration" %} &gt; {% trans "Web pages and apps" %}
 {% endblock %}
 
-{% comment %}
-{% block jsblock %}
-    {{ block.super }}
-{% endblock %}
-{% endcomment %}
 {% block content %}
     <div id="message-box"></div>
 
@@ -29,27 +24,35 @@
                 <tr>
                     <td>{{ site.pub_date }}</td>
                     <td>{% trans site.type %}</td>
-                    <td>{{ site.server_name }}</td>
+                    <td>{{ site.main_domain }}</td>
                     <td class="list_actions">
                         <ul class="akce">
-                        {% if site.type == "php" or site.type == "static" %}
-                            <li><a href="{% url app_static app_type=site.type app_id=site.id %}">
-                                <img src="{{ STATIC_URL }}images/ico-editovat.png" alt="{% trans "Edit" %}"/>
-                            </a></li>
-                        {% endif %}
-                        {% if site.type == "uwsgi" or site.type == "modwsgi" %}
-                            {% if site.type == "uwsgi" %}
-                            <li><a href="{% url wsgiadmin.apacheconf.views.restart site.id %}" title="{% trans "Restart" %}">
-                                    <img src="{{ STATIC_URL }}images/ico-obnovit.png" alt="{% trans "Restart" %}"/>
-                                </a></li>
+                            {% if site.type == "php" or site.type == "static" %}
+                                <li>
+                                    <a href="{% url app_static app_type=site.type app_id=site.id %}">
+                                        <img src="{{ STATIC_URL }}images/ico-editovat.png" alt="{% trans "Edit" %}"/>
+                                    </a>
+                                </li>
                             {% endif %}
-                            <li><a href="{% url wsgiadmin.apacheconf.views.app_wsgi site.id %}" title="{% trans "Edit" %}">
-                                <img src="{{ STATIC_URL }}images/ico-editovat.png" alt="{% trans "Edit" %}"/>
-                            </a></li>
-                        {% endif %}
-                        <li class="smazat"><a href="#" id="remove_{{ site.id }}" rel="{{ site.id }}" class="bold object_delete" title="{% trans "Delete" %}">
-                            <img src="{{ STATIC_URL }}images/ico-smazat.png" alt="{% trans "Delete" %}"/>
-                        </a></li>
+                            {% if site.type == "uwsgi" or site.type == "modwsgi" %}
+                                {% if site.type == "uwsgi" %}
+                                    <li>
+                                        <a href="{% url wsgiadmin.apacheconf.views.restart site.id %}" title="{% trans "Restart" %}">
+                                            <img src="{{ STATIC_URL }}images/ico-obnovit.png" alt="{% trans "Restart" %}"/>
+                                        </a>
+                                    </li>
+                                {% endif %}
+                                <li>
+                                    <a href="{% url wsgiadmin.apacheconf.views.app_wsgi site.id %}" title="{% trans "Edit" %}">
+                                        <img src="{{ STATIC_URL }}images/ico-editovat.png" alt="{% trans "Edit" %}"/>
+                                    </a>
+                                </li>
+                            {% endif %}
+                            <li class="smazat">
+                                <a href="#" id="remove_{{ site.id }}" rel="{{ site.id }}" class="bold object_delete" title="{% trans "Delete" %}">
+                                    <img src="{{ STATIC_URL }}images/ico-smazat.png" alt="{% trans "Delete" %}"/>
+                                </a>
+                            </li>
                         </ul>
                         <span id="removed_{{ site.id }}" class="info"></span>
                     </td>
