Support for crontabs

--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -160,6 +160,8 @@
                                 <li><a href="{% url app_static app_type='php' %}">{% trans "Add PHP app" %}</a></li>
                                 <li><a href="{% url app_wsgi %}">{% trans "Add WSGI app" %}</a></li>
                                 <li><a href="{% url app_list %}">{% trans "Your apps" %}</a></li>
+                                <li><a href="{% url create_cron %}">{% trans "Add cron record" %}</a></li>
+                                <li><a href="{% url cron_list %}">{% trans "Crontab" %}</a></li>
                             </ul>
                         </li>
                     </ul>
