--- a/wsgiadmin/templates/cron.html
+++ b/wsgiadmin/templates/cron.html
@@ -10,9 +10,9 @@
 <div id="message-box"></div>
 
 <h3>{% trans "List of crontab records" %}</h3>
-        
+
 <p>{% trans "Important: changes will destroy your current crontab!" %}</p>
-        
+
 <table>
     <thead>
     <tr>
@@ -25,7 +25,7 @@
     <tbody id="objects_list">
     {% for cron in object_list %}
     <tr>
-        <td>{{ cron.display_time }}</td>
+        <td>{{ cron.get_time_display }}</td>
         <td>{{ cron.script }}</td>
         <td class="list_actions">
             <ul class="akce">
