remove useless dajaxice dependency

--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>{% load i18n %}{% load dajaxice_templatetags %}
+<!DOCTYPE html>
+{% load i18n %}
+
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -45,9 +47,6 @@
             });
         {% endblock %}
     </script>
-
-    {% dajaxice_js_import %}
-    <script src="{{ STATIC_URL }}js/jquery.dajax.core.js" type="text/javascript" charset="utf-8"></script>
 
     <title>{% trans "Administration" %} {{ site }}</title>
 </head>
