--- a/wsgiadmin/m/css/style.css
+++ b/wsgiadmin/m/css/style.css
@@ -141,57 +141,47 @@ img {
 }
 #header #main-menu li {
 	margin: 0 5px 0 0;
-	height: 30px;
 	float: left;
 	line-height: 31px;
 	list-style-type: none;
 	text-transform: uppercase;
 	font-size: 11px;
 }
+
+#sidebar ul li a,
 #header #main-menu li a {
-	background: url('../images/bg-main-menu-li-left-a.jpg') no-repeat left top;
-	padding: 0 0 0 20px;
-	height: 31px;
-	float: left;
-	text-decoration: none;
-	color: #f2f2f2;
+    background: #3e454d; /* Old browsers */
+    background: -moz-linear-gradient(top, #3e454d 0%, #3e454d 30%, #2d3238 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3e454d), color-stop(30%,#3e454d), color-stop(100%,#2d3238)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #3e454d 0%,#3e454d 30%,#2d3238 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #3e454d 0%,#3e454d 30%,#2d3238 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #3e454d 0%,#3e454d 30%,#2d3238 100%); /* IE10+ */
+    background: linear-gradient(top, #3e454d 0%,#3e454d 30%,#2d3238 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3e454d', endColorstr='#2d3238',GradientType=0 ); /* IE6-9 */
+    padding: 0 20px;
+    height: 31px;
+    line-height: 31px;
+    display: inline-block;
+    text-decoration: none;
+    color: #f2f2f2;
+    border-radius: 5px;
+    border: 1px solid #333;
 }
-#header #main-menu li a span {
-	background: url('../images/bg-main-menu-li-right-a.jpg') no-repeat right top;
-	width: 20px;
-	height: 31px;
-	float: right;
-}
-#header #main-menu li a:hover {
-	background: url('../images/bg-main-menu-li-left.jpg') no-repeat left top;
-	padding: 0 0 0 20px;
-	height: 31px;
-	float: left;
-	text-decoration: none;
-	color: #f2f2f2;
-}
-#header #main-menu li a:hover span {
-	background: url('../images/bg-main-menu-li-right.jpg') no-repeat right top;
-	width: 20px;
-	height: 31px;
-	float: right;
-	color: #444;
-}
+
+#sidebar ul li a:hover,
+#sidebar ul li.active a,
+#header #main-menu li a:hover,
 #header #main-menu li.active a {
-	background: url('../images/bg-main-menu-li-left.jpg') no-repeat left top;
-	padding: 0 0 0 20px;
-	height: 31px;
-	float: left;
-	text-decoration: none;
-	color: #f2f2f2;
+    background: #a2d731; /* Old browsers */
+    background: -moz-linear-gradient(top, #a2d731 0%, #a2d731 29%, #739711 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a2d731), color-stop(29%,#a2d731), color-stop(100%,#739711)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #a2d731 0%,#a2d731 29%,#739711 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #a2d731 0%,#a2d731 29%,#739711 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #a2d731 0%,#a2d731 29%,#739711 100%); /* IE10+ */
+    background: linear-gradient(top, #a2d731 0%,#a2d731 29%,#739711 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a2d731', endColorstr='#739711',GradientType=0 ); /* IE6-9 */
 }
-#header #main-menu li.active a span {
-	background: url('../images/bg-main-menu-li-right.jpg') no-repeat right top;
-	width: 20px;
-	height: 31px;
-	float: right;
-	color: #444;
-}
+
 /*--------------------------------------------------------------------------------------------------------
 	Sidebar
 --------------------------------------------------------------------------------------------------------*/
@@ -212,24 +202,10 @@ img {
 	list-style-type: none;
 }
 #sidebar ul li a {
-	background: url('../images/bg-sidebar-menu-a.png') no-repeat 0 0;
-	margin: 0 0 5px 0;
-	padding: 0 0 0 20px;
-	height: 30px;
-	line-height: 32px;
-	font-size: 11px;
-	text-transform: uppercase;
-	display: block;
-	text-decoration: none;
-	color: #f2f2f2;
-}
-#sidebar ul li a:hover {
-	background: url('../images/bg-sidebar-menu-hover.png') no-repeat 0 0;
-  	color: #f2f2f2;
-}
-#sidebar ul li.active a {
-	background: url('../images/bg-sidebar-menu-hover.png') no-repeat 0 0;
-  	color: #f2f2f2;
+    display: block;
+    margin: 0 0 5px;
+    border-radius: 5px 0 0 5px;
+    border-right: none;
 }
 /*--------------------------------------------------------------------------------------------------------
 	Content
@@ -769,7 +745,7 @@ div.ctrlHolder .zavrit {
 	display: block;
 }
 .container .textinput -registrace {
-	background: url('../images/bg-textinput -registrace.jpg') no-repeat 0 0;
+	background: url('../images/bg-textinput-registrace.jpg') no-repeat 0 0;
 	margin: 0 0 10px 20px;
 	padding: 0 2px;
 	width: 256px;
@@ -946,3 +922,83 @@ div.ctrlHolder .zavrit {
     color: #FFF161;
     text-align: center;
 }
+
+
+
+
+
+/* style2.css
+
+body { background: #ccc; color: #333; padding: 0; font-size: 12px; font-family: sans-serif; line-height: 1.5em; }
+
+a { color: #069; }
+
+h1 { margin: 0; font-size: 2em; font-weight: normal; }
+h2 { margin: 0; font-size: 1em; font-weight: bold; }
+
+.layout { overflow: hidden; }
+
+.panel { width: 25%; float: left; }
+.panelHolder { padding: 1em; }
+
+.items { margin: 1em 0; padding: 0; list-style: none; border: 1px solid #999; background: #fff; -moz-box-shadow: 0 0 2px #999; }
+.items li { padding: 1em; background-image: -moz-linear-gradient( #fff, #f2f2f2 ); -moz-box-shadow: inset 0 -1px 1px #ccc, inset 0 0 2px #fff; }
+.items li:hover { background-image: -moz-linear-gradient( #f2f2f2, #fff ); }
+.items li.active { background-image: -moz-linear-gradient( #f2f2f2, #ccc ); }
+.items h2 { float: left; }
+.items h2 a { color: #333; text-decoration: none; text-shadow: #fff 0 1px; }
+.items .labels { float: right; }
+.items li .general { overflow: hidden; }
+.items .details { display: none; }
+.items .active .details { display: block; }
+
+.labels span { font-size: 0.8em; text-transform: uppercase; color: #fff; background: #999; padding: 0 0.5em; -moz-border-radius: 1em; -webkit-border-radius: 1em; border-radius: 1em; }
+.labels .success { background: #009900; }
+.labels .running { background: #ff9900; }
+
+.details p { margin: 0.5em 0; }
+.details strong { display: block; font-weight: normal; font-size: 0.8em; text-transform: uppercase; color: #999999; }
+
+.icon { vertical-align: middle; }
+
+.note { margin: 0; color: #999; font-size: 0.8em; clear: both; }
+
+dl { margin: 1em 0; }
+dt { font-size: 0.8em; text-transform: uppercase; color: #999; padding: 0; margin: 0; }
+dd { padding: 0; margin: 0.5em 0; }
+*/
+
+
+.ajax_refresh {
+    margin: 15px;
+    float: left;
+    background-image: url('../icons/ajax-loader.png');
+    background-repeat: no-repeat;
+    padding-left: 30px;
+    cursor: pointer;
+    width: 100px;
+}
+
+.ajax_refresh.running {
+    background-image: url('../icons/ajax-loader.gif');
+}
+
+.ajax_refresh .status {
+    padding-left: 10px;
+}
+
+.error {
+    background-color: #FFDFDF;
+    padding: 5px;
+    border: 1px solid #4D4D4D;
+}
+
+.list_actions a{
+    margin-right: 10px;
+}
+
+.pagination a.current {
+    font-weight: bold;
+    text-decoration: none;
+}
+
