--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -8,12 +8,15 @@
     <meta name="robots" content="index, follow" />
     <meta name="keywords" content="{{ site }}" />
     <meta name="description" content="{{ site }}" />
-    <link rel="icon" href="/m/favicon.png" type="image/png">
-    <link type="text/css" media="all" href="{{ STATIC_URL }}style/style.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}uni-form/css/uni-form.css">
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}uni-form/css/default.uni-form.css">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery-ui-1.8.16.custom.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/admin.css" type="text/css" media="screen" />
+    <link rel="icon" href="{{ STATIC_URL }}favicon.png" type="image/png">
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css"  media="all" />
+    <!--[if IE lt 8]>
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/ie.css" />
+    <![endif]-->
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}uni-form/css/uni-form.css"/>
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}uni-form/css/default.uni-form.css"/>
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery-ui-1.8.16.custom.css" media="screen"/>
+
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-1.8.9.custom.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.cookie.js"></script>
@@ -69,7 +72,9 @@
                             {% else %}
                                 {{ u.username }} {% if u.is_superuser %} <span id="uzivatel">({% trans "superuser" %})</span>{% endif %}
                             {% endif %}
-                        <span class="odhlasit"><a href="{% url django.contrib.auth.views.logout %}">{% trans "Logout" %}</a></span>
+                        <span class="odhlasit">
+                            <a href="{% url django.contrib.auth.views.logout %}">{% trans "Logout" %}</a>
+                        </span>
                     </p>
 
                     <ul id="main-menu">
